# Movies-WatchList

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: .env-example.txt  .gitignore  __init__.py  database.py  logger.py  main.py  models.py  mytools.py  schemas.py
app/auth/: __init__.py  login.py  registration.py  security.py
app/core/: __init__.py  logger.py  main.py  mytools.py  redis_client.py  ws_manager.py
app/database/: __init__.py  database.py  models.py  schemas.py
app/services/: tmdb.py
frontend/: index.html
