[project]
name = "movie-watchlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "tzlocal>=5.3.1",
    "uvicorn>=0.40.0",
]
